<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/StandardMargin"
    android:textAlignment="center"
   >
    <TextView
        android:id="@+id/Name_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/StandardMargin"
        android:background="@drawable/tableshape"
        android:gravity="center"
        android:text="@string/nameOfProduct"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/NormalFontSize"

        />
    <TextView
        android:id="@+id/Count_or_Time_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/StandardMargin"
        android:layout_marginRight="@dimen/StandardMargin"
        android:background="@drawable/tableshape"
        android:gravity="center"
        android:text="@string/CountOfProduct"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/NormalFontSize"


        />
    <TextView
        android:id="@+id/Price_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/StandardMargin"
        android:background="@drawable/tableshape"
        android:gravity="center"
        android:text="@string/PriceOfProduct"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/NormalFontSize"

        />


</TableRow>